# rs_teardown_tree

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  README.rst  TODO.md  delete_range.md
benchmarks/: .~lock.benchmarks.ods#  Cargo.toml  benchmarks.md  benchmarks.ods
benchmarks/src/: main.rs
benchmarks/src/bst/: mod.rs  node.rs
src/: base.rs  delete_bulk.rs  delete_range.rs  drivers.rs  external_api.rs  interval.rs  lib.rs  rust_bench.rs  slot_stack.rs  testins.rs  unsafe_stack.rs
src/applied/: interval.rs  interval_tree.rs  mod.rs  plain_tree.rs
src/base/: base_repr.rs  bulk_delete.rs  drivers.rs  mod.rs  node.rs  sink.rs  slot_stack.rs  tree_building.rs  unsafe_stack.rs  util.rs
