[package]
name = "teardown_tree"
version = "0.2.7"
authors = ["Kirill Khazan <kirillkh@gmail.com>"]

[lib]
name = "teardown_tree"
path = "src/lib.rs"

[[bin]]
name = "benchmarks"
path = "src/bin/benchmarks.rs"

[dependencies]
rand = "0.3.14"
wio = "0.1.2"
cpuprofiler = "0.0.2"

[profile.release]
opt-level = 3
debug = true
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
