[package]
name = "teardown_tree"
version = "0.6.6"
authors = ["Kirill Khazan <kirillkh@gmail.com>"]
description = "A binary search tree that supports fast clone and delete-range operations"
readme = "README.rst"
license-file = "LICENSE-MIT"
homepage = "https://github.com/kirillkh/rs_teardown_tree"
repository = "https://github.com/kirillkh/rs_teardown_tree.git"
keywords = ["BST", "tree", "teardown"]

[workspace]
members = [".", "benchmarks"]

[lib]
name = "teardown_tree"
path = "src/lib.rs"

[dependencies]
rand = "0.3.14"
derive-new = "0.4"
#wio = "0.1.2"

[dev-dependencies]
quickcheck = "0.4.1"
#quickcheck_macros = "0.4"

[profile.release]
opt-level = 3
debug = true
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true
lto = false
debug-assertions = true
codegen-units = 1


[features]
unstable = []
