[package]
name = "teardown_tree_bench"
version = "0.6.6"
authors = ["Kirill Khazan <kirillkh@gmail.com>"]
license-file = "LICENSE-MIT"
homepage = "https://github.com/kirillkh/rs_teardown_tree"
repository = "https://github.com/kirillkh/rs_teardown_tree.git"

workspace = ".."

[[bin]]
name = "benchmarks"
path = "src/main.rs"

[dependencies]
rand = "0.3.14"
splay = { git = "https://github.com/kirillkh/splay-rs.git" }
treap = { git = "https://github.com/kirillkh/treap-rs.git" }
teardown_tree = { path = ".." }
libc = "0.2.7"
derive-new = "0.4"
##wio = "0.1.2"

[dependencies.x86]
version = "0.8.1"
default-features = false
